# esp-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/workflows/: build.yml
examples/: .gitignore  CMakeLists.txt  README.md  credentials.h.example  run.sh  sdkconfig.local.example
examples/logging/: main.cpp
examples/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
examples/mdns/: main.cpp
examples/metrics/: main.cpp
examples/smartconfig/: main.cpp
examples/tasks/: main.cpp
examples/wifi/: main.cpp
examples/wifi_ap/: main.cpp
examples/wifi_scan/: main.cpp
examples/wifi_sta/: main.cpp
examples/wifi_test/: main.cpp
include/earbrain/: completion.hpp  logging.hpp  mdns_service.hpp  metrics.hpp  wifi_service.hpp
src/: logging.cpp  mdns_service.cpp  metrics.cpp  validation.cpp  wifi_service.cpp
